// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Pending > before the giveaway starts > matches the snapshot 1`] = `
<div
  class="text-center my-4"
>
  <svg
    aria-hidden="true"
    class="lucide lucide-clock h-12 w-12 mx-auto mb-4 text-muted-foreground"
    fill="none"
    height="24"
    stroke="currentColor"
    stroke-linecap="round"
    stroke-linejoin="round"
    stroke-width="2"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M12 6v6l4 2"
    />
    <circle
      cx="12"
      cy="12"
      r="10"
    />
  </svg>
  <h3
    class="text-lg font-semibold mb-2"
  >
    Giveaway Starting Soon
  </h3>
  <p
    class="text-muted-foreground"
  >
    This giveaway will begin 
    in 2 days
  </p>
</div>
`;

exports[`Pending > when the giveaway has already started > matches the snapshot 1`] = `
<div
  class="text-center my-4"
>
  <svg
    aria-hidden="true"
    class="lucide lucide-clock h-12 w-12 mx-auto mb-4 text-muted-foreground"
    fill="none"
    height="24"
    stroke="currentColor"
    stroke-linecap="round"
    stroke-linejoin="round"
    stroke-width="2"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M12 6v6l4 2"
    />
    <circle
      cx="12"
      cy="12"
      r="10"
    />
  </svg>
  <h3
    class="text-lg font-semibold mb-2"
  >
    Giveaway Has Started!
  </h3>
  <p
    class="text-muted-foreground mb-4"
  >
    This giveaway is now live. Click below to refresh the page and participate.
  </p>
  <button
    class="cursor-pointer inline-flex items-center justify-center gap-2 whitespace-nowrap text-sm font-medium transition-all disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg:not([class*='size-'])]:size-4 shrink-0 [&_svg]:shrink-0 [&_svg]:mr-0 outline-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive bg-primary text-primary-foreground shadow-xs hover:bg-primary/90 h-10 rounded-md px-6 has-[>svg]:px-4"
    data-slot="button"
  >
    <svg
      aria-hidden="true"
      class="lucide lucide-refresh-cw h-4 w-4 mr-2"
      fill="none"
      height="24"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="2"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M3 12a9 9 0 0 1 9-9 9.75 9.75 0 0 1 6.74 2.74L21 8"
      />
      <path
        d="M21 3v5h-5"
      />
      <path
        d="M21 12a9 9 0 0 1-9 9 9.75 9.75 0 0 1-6.74-2.74L3 16"
      />
      <path
        d="M8 16H3v5"
      />
    </svg>
    Refresh Page
  </button>
</div>
`;
